Fix Paddings and Alignings

--- a/src/big-components/home/home.component.scss
+++ b/src/big-components/home/home.component.scss
@@ -119,6 +119,7 @@ button {
     }
 
     .product-text{
+    width: 90%;
       p:nth-child(1){
         font-size: 15px;
         font-weight: 100;
